--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .MuiDrawer-root .MuiPaper-root {
@@ -8,5 +9,5 @@
 }
 
 body {
-  background: #f2f2f2 !important;
+  background: black !important;
 }
